// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Generated Logs > 1 match on no description 1`] = `
"
docs: 
     ↑
     ┆
     ╵--- Missing or empty commit description.

"
`;

exports[`Generated Logs > 1 match on no description 2`] = `
"
 docs: 
↑
┆
╵--- Avoid leading or trailing spaces in the commit message.

"
`;

exports[`Generated Logs > 2 match on no description, no scope description 1`] = `
"
docs(): 
     ↑ ↑
     ┆ ┆
     ┆ ╵--- Missing or empty commit description.
     ┆
     ╵--- Empty commit scope provided.

"
`;

exports[`Generated Logs > 3 match on no description, no scope description, no space before scope and colon 1`] = `
"
docs() : 
     ↑↑ ↑
     ┆┆ ┆
     ┆┆ ╵--- Missing or empty commit description.
     ┆┆
     ┆╵--- Remove spaces before the colon in the commit message.
     ┆
     ╵--- Empty commit scope provided.

"
`;

exports[`Generated Logs > 4 match on no description, no scope description, no space before scope and colon, no space after type and before scope 1`] = `
"
docs () : 
    ↑ ↑↑ ↑
    ┆ ┆┆ ┆
    ┆ ┆┆ ╵--- Missing or empty commit description.
    ┆ ┆┆
    ┆ ┆╵--- Remove spaces before the colon in the commit message.
    ┆ ┆
    ┆ ╵--- Empty commit scope provided.
    ┆
    ╵--- Avoid space between commit type and scope.

"
`;

exports[`Generated Logs > with match on the same position 1`] = `
"
docs:
     ↑
     ┆
     ┆--- Missing or empty commit description.
     ┆
     ╵--- Space after the colon is required.

"
`;

exports[`Generated Logs > with match on the same position 2`] = `
"
docsfoo()foo:
     ↑  ↑ ↑  ↑
     ┆  ┆ ┆  ┆
     ┆  ┆ ┆  ┆--- Missing or empty commit description.
     ┆  ┆ ┆  ┆
     ┆  ┆ ┆  ╵--- Space after the colon is required.
     ┆  ┆ ┆
     ┆  ┆ ╵--- Invalid character before the colon in the commit message.
     ┆  ┆
     ┆  ╵--- Empty commit scope provided.
     ┆
     ╵--- Unexpected character between commit type and scope.

"
`;
